paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/fun_decl_2/sample_005/target.compile.log
error[E0499]: cannot borrow `v[_]` as mutable more than once at a time
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/fun_decl_2/sample_005/target.rs:54:13
   |
53 |     let x = &mut v[sel];
   |             ----------- first mutable borrow occurs here
54 |     let y = &mut v[sel + 1];
   |             ^^^^^^^^^^^^^^^ second mutable borrow occurs here
55 |
56 |     let before_x = *x;
   |                    -- first borrow later used here
   |
   = help: use `.split_at_mut(position)` to obtain two mutable non-overlapping sub-slices

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.